@@ -1,6 +1,10 @@
 GeneWeb version 4.02
 --------------------
 
+* GeneWeb server or CGI (gwd)
+  - [11 Apr 01] The Gregorian and Julian calendars did not work for years
+    less than 1800 BC. Fixed.
+
 GeneWeb version 4.01
 --------------------
 
